# magisterial-manifold

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  House1.txt  Makefile  README.md  Untitled.keystore  config_manager.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  error_handler.js  index.html  list_models.py  manifest.sh  mlaos_init.py  optimized_character_builder.js  optimized_data_manager.js  optimized_ui_manager.js  package-lock.json  package.json  performance_monitor.js  pie.py  pyproject.toml  requirements.txt  run_cypher.py  script (1).py  script.py  settings.gradle.kts  sync_lore.py  test_mtp.py  tier1_init.sh  tsconfig.json  updated  validator.js  verify_key.py
GridDefense/: bind_sentinels.sh  dashboard.py  manifold_monitor.py  monitor_launchd.schema  pre-commit.schema
core/: sovereign_unit.py  test_sovereign_unit.py
hall_of_records/: CERT_20260330_205128.txt  CERT_20260330_205221.txt  CERT_20260330_210018.txt  CERT_20260330_210054.txt  CERT_20260330_223928.txt  CERT_20260331_145158.txt  CERT_20260331_145940.txt  CERT_20260331_DEV_AUDIT.txt  CERT_20260331_JOB_AUDIT.txt  CERT_20260331_OMNI_AUDIT.txt  CERT_20260331_PX09_FUSION.txt  CERT_20260331_SOL_AUDIT.txt  CERT_20260331_VOID_AUDIT.txt  VOID_LOGS.txt
magisterial_manifold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
manifold/: r36_topology.test.ts  r36_topology.ts
protocols/: bio_gpt_negotiation.md  probe_aurelia.py  truth_verification.md
reports/: sector_report.json  sector_report.md
scripts/: bootstrap.sh  check_nested_git.sh  (+2 more)
(+85 files in other folders)
